@@ -1,5 +1,6 @@
 Version 0.4.1+
 	* Add multi_label argument to normaliselabels
+	* Add multi_label argument to nfoldcrossvalidation.foldgenerator
 
 Version 0.4.1 2011-08-25 by luispedro
 	* Fix important bug in multi-process gridsearch
